# pf-seed

./: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/: dependencies.cmake  install-config.cmake  install-rules.cmake  options.cmake
include/seed/: seed.hpp  window.hpp
include/seed/window/: raw_window.hpp  window.hpp  window_create_options.hpp  window_flags.hpp
src/: seed.cpp  window.cpp
src/window/: window.cpp
tests/: CMakeLists.txt
tests/src/: seed_test.cpp
